--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "recalbox-webconfig",
-  "version": "0.0.0",
+  "author": "MikaXII",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -14,14 +15,5 @@
     "morgan": "~1.5.3",
     "serve-favicon": "~2.2.1",
     "connect-busboy": "0.0.2",
-    "grunt": "~0.4.5",
-    "grunt-contrib-jshint": "~0.10.0"
-  },
-  "devDependencies": {
-    "grunt-contrib-cssmin": "~0.12.3",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "~0.9.1",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-express-server": "~0.5.1"
   }
 }
